--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ script:
   - ./configure --prefix=/app
   - make                           # if that fails: make bootstrap
   - sudo make install
+  - bash -ex appimage.sh
