--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - make
   - sudo make install
   - cd ..
-  - sudo apt-get -y install squashfs-tools
+#  - sudo apt-get -y install squashfs-tools
   - bash -ex appimage.sh
   
 after_success:
