--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
   - bash -ex appimage.sh
   
 after_success:
-  - ls -lh out/* # Assuming you have some files in out/ that you would like to upload
+  - ls -lh ../out/* # Assuming you have some files in out/ that you would like to upload
+  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
   - bash upload.sh ../out/*AppImage*
 
 branches:
