--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - sudo apt-get -y install libgtk-3-dev libwebkitgtk-3.0-dev
   - ./autogen.sh
   - ./configure --prefix=/app --without-selinux --with-x-toolkit=gtk3
-  - make
+  - make -j$(nproc)
   - sudo make install
   - cd ..
 #  - sudo apt-get -y install squashfs-tools
