--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - cp appdir/usr/share/icons/hicolor/128x128/apps/emacs.png appdir/
   - wget -c -nv https://github.com/$(wget -q https://github.com/probonopd/go-appimage/releases -O - | grep "appimagetool-.*-x86_64.AppImage" | head -n 1 | cut -d '"' -f 2)
   - chmod +x ./appimagetool-*.AppImage
+  - file appdir/usr/bin/emacs-*
   - ./appimagetool-*.AppImage deploy appdir/usr/share/applications/*.desktop
   - ./appimagetool-*.AppImage appdir/
 
