--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 script:
   - wget -c "http://ftpmirror.gnu.org/emacs/emacs-${RELEASE_VERSION}.tar.gz"
   - tar xf emacs-*tar.gz
-  - cd emacs*
+  - cd emacs*/
   - sudo apt-get build-dep emacs24
   - sudo apt-get -y install libgtk-3-dev libwebkitgtk-3.0-dev
   - ./autogen.sh
