--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ script:
   - chmod +x ./appimagetool-*.AppImage
   - file appdir/usr/bin/emacs-*
   - ./appimagetool-*.AppImage deploy appdir/usr/share/applications/*.desktop
-  - sed -i -e 's|/usr|././|g' appdir/usr/bin/emacs*
-  - sed -i -e 's|/app|././|g' appdir/usr/bin/emacs*
+  - sed -i -e 's|/usr|././|g' appdir/usr/bin/emacs-*
   - ( cd appdir/usr/bin/ ; rm emacs ; ln -s emacs-* emacs )
   - rm -rf appdir/usr/share/metainfo # FIXME; let it in once we can validate it
   - LD_LIBRARY_PATH='' find appdir -type f -exec ldd {} 2>&1 \; | grep '=>' | grep -v appdir
