We need some extra envs
https://github.com/probonopd/Emacs.AppImage/issues/11#issuecomment-564399378

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - chmod +x ./appimagetool-*.AppImage
   - file appdir/usr/bin/emacs-*
   - ./appimagetool-*.AppImage deploy appdir/usr/share/applications/*.desktop
+  - rm appdir/AppRun ; cp ../AppRun ./appdir/ # Because we need some extra envs
   - sed -i -e 's|/usr|././|g' appdir/usr/bin/emacs-*
   - ( cd appdir/usr/bin/ ; rm emacs ; ln -s emacs-* emacs )
   - rm -rf appdir/usr/share/metainfo # FIXME; let it in once we can validate it
