--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get build-dep emacs
+          sudo apt-get build-dep emacs-gtk
           sudo apt-get -y install libgtk-3-dev libwebkitgtk-3.0-dev
 
       - name: Configure and build Emacs
