--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,12 @@ jobs:
       - name: Add deb-src to sources.list
         run: |
           echo "deb-src http://archive.ubuntu.com/ubuntu focal main restricted" | sudo tee -a /etc/apt/sources.list
+          cat /etc/apt/sources.list
           sudo apt-get update
 
       - name: Install dependencies
         run: |
-          sudo apt-get build-dep emacs-gtk
+          sudo apt-get build-dep emacs
           sudo apt-get -y install libgtk-3-dev libwebkitgtk-3.0-dev
 
       - name: Configure and build Emacs
